--- a/report/Letter/letter.tex
+++ b/report/Letter/letter.tex
@@ -5,7 +5,7 @@ s4833843@uq.edu.au \\
 \end{flushright}
 
 Prof Michael Brünig \\
-Acting Head of School \\
+Head of School \\
 School of Electrical Engineering and Computer Science \\
 The University of Queensland \\
 St Lucia  QLD  4072 \\
@@ -14,7 +14,7 @@ Dear Professor Brünig, \\
 
 \par
 \hspace*{2em} In accordance with the requirements of the Degree of Master of Computer Science (Management) in the School of Electrical Engineering and Computer Science, I submit the following thesis entitled
-“Prolog Optimizations in GraalVM”. The thesis was performed under the supervision of Mr Brae J. Webb, Prof Mark Utting, and Prof Ian J. Hayes. \\
+“Prolog Optimizations in GraalVM”. The thesis was performed under the supervision of Brae J. Webb, Mark Utting, and Ian J. Hayes. \\
 \par
 \hspace*{2em} I declare that the work submitted in the thesis is my own, except as acknowledged in the text and footnotes, and that it has not previously been submitted for a degree at the University of Queensland or any other institution.
 
