--- a/report/Packages/uqtitle.sty
+++ b/report/Packages/uqtitle.sty
@@ -76,13 +76,13 @@
 \begin{center}
 	Supervisors \\
 	\Large
-    Mr Brae J. Webb 
+    Brae J. Webb 
 	\includegraphics[width=.02\textwidth]{Packages/OrcidLogo} 
 	\orcid{0000-0003-3579-0244}, 
-	Prof Mark Utting
+	Mark Utting
 	\includegraphics[width=.02\textwidth]{Packages/OrcidLogo} 
 	\orcid{0000-0003-3134-6306}, 
-	Prof Ian J. Hayes
+	Ian J. Hayes
 	\includegraphics[width=.02\textwidth]{Packages/OrcidLogo} 
 	\orcid{0000-0003-3649-392X}
 \end{center}
